# mini-blockchain

./: .gitignore  CERINTE.md  CMakeWorkspaceSettings.json  README.md
api/: app.py
core/: CMakeLists.txt  CMakePresets.json  vcpkg.json
core/include/: block.cpp  block.h  blockchain.h  bridge_test.h  export.h  merkle.h  mining.h  persistence.h  sha256.h  transaction.h  wallet.h
core/src/: block.cpp  blockchain.cpp  bridge_test.cpp  main.cpp  merkle.cpp  mining.cpp  persistence.cpp  sha256.cpp  transaction.cpp  wallet.cpp
docs/: blockchain_prezentare.md
network/: chain_format.py  consensus.py  get_chain.py  inject_fork.py  mempool.py  node.py  node_client.py  node_server.py  protocol.py  send_tx.py  test_bridge.py  test_chain_bridge.py  test_fork.py  test_http_transaction.py  test_mempool.py  test_mining_interrupt.py  test_signature_rejection.py  tx_body.json  wallet.py  wallet_keys.py
network/tests/: http_client.py  run_all.py  test_get_info.py  test_sign_and_send_http.py  test_signature_rejection_http.py
ui/: app.js  index.html  style.css
